[ADD] 라우터 적용 & views 파일 레이아웃 분리

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -4,4 +4,4 @@ html
     link(rel="stylesheet", href="/css/index.css")
     title Don't Say It! | 온라인 금칙어 게임
   body
-    h1 Don't Say it!
+    block content
