--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -5,4 +5,5 @@ html
     title Don't Say It! | 온라인 금칙어 게임
   body
     block content
+    script(src="/socket.io/socket.io.js")
     script(src="/js/index.js")
