[ADD] layout.pug 스타일 & roomRouter 추가
- 현재 사파리 브라우저에서 정적 파일을 불러오지 못하는 문제가 발생([Error] Failed to load resource: SSL 오류가 발생했기 때문에 서버에 안전하게 연결할 수 없습니다.) => helmet 미들웨어 문제로 보이는데 추후 해결 필요함

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,7 +1,22 @@
-body {
-  background-color: black;
+* {
+  padding: 0;
+  margin: 0;
 }
 
-h1 {
-  color: white;
+body {
+  display: flex;
+  height: 100dvh;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e2e1e0;
+}
+
+main#main_container {
+  display: flex;
+  width: 32rem;
+  background-color: #fff;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
