--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -4,6 +4,7 @@ html
     link(rel="stylesheet", href="/css/index.css")
     title Don't Say It! | 온라인 금칙어 게임
   body
-    block content
+    main#main_container 
+      block content
     script(src="/socket.io/socket.io.js")
     script(src="/js/index.js")
