[ADD] 대화방 헤더 구현
[+]
- 대화방 전용 css 파일 'room.css' 추가

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -11,12 +11,10 @@ body {
   background-color: #e2e1e0;
 }
 
-main#main_container {
+main#layout {
   display: flex;
   width: 32rem;
   background-color: #fff;
   flex-grow: 1;
   flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
 }
