--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -2,9 +2,10 @@ doctype html
 html
   head
     link(rel="stylesheet", href="/css/index.css")
+    link(rel="stylesheet", href="/css/room.css")
     title Don't Say It! | 온라인 금칙어 게임
   body
-    main#main_container 
+    main#layout 
       block content
     script(src="/socket.io/socket.io.js")
     script(src="/js/index.js")
