--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -1,4 +1,10 @@
 extends layout.pug
 
 block content
-    h1 room
+    div#room_container
+        header.room_header 
+            span.exit_button 나가기
+            p.time_remaining 남은 시간 
+                span 1:54
+        div 채팅창
+        div 입력 폼
