[ADD] 대화방 메시지 입력창  ui 구현
- 아이콘은 폰트어썸 사용
- ** 모바일 환경에서 main_container가 꽉차게 나타나지 않는 문제가 발생

--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -3,8 +3,12 @@ extends layout.pug
 block content
     div#room_container
         header.room_header 
-            span.exit_button 나가기
+            span.exit_button 
+                i.fa-solid.fa-chevron-left
             p.time_remaining 남은 시간 
                 span 1:54
         div 채팅창
-        div 입력 폼
+        form.message_form
+            input(type="text", placeholder="메시지를 입력해주세요.", maxLength=150)
+            button
+                i.fa-solid.fa-arrow-up
