--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -11,6 +11,10 @@ body {
   background-color: #e2e1e0;
 }
 
+input:focus {
+  outline: 2px solid #ffa600a5;
+}
+
 main#layout {
   display: flex;
   width: 32rem;
