--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -1,8 +1,8 @@
 div#room_container {
-  flex-grow: 1;
-  color: #4d4d4d;
-  padding: 0 1rem;
   display: flex;
+  padding: 0 1rem;
+  color: #4d4d4d;
+  flex-grow: 1;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -18,6 +18,7 @@ header.room_header {
 header.room_header > span.exit_button {
   position: absolute;
   top: 50%;
+  font-size: 1.2rem;
   cursor: pointer;
   transform: translateY(-50%);
 }
@@ -28,5 +29,34 @@ header.room_header > p.time_remaining {
 }
 
 header.room_header > p.time_remaining > span {
-  font-weight: bold;
+  font-weight: 600;
+}
+
+form.message_form {
+  display: flex;
+  position: relative;
+  margin-bottom: 0.8rem;
+}
+
+form.message_form > input {
+  padding: 1rem 3.1rem 1rem 1rem;
+  border: none;
+  flex-grow: 1;
+  border-radius: 25px;
+  background-color: #d2d2d270;
+}
+
+form.message_form > button {
+  position: absolute;
+  top: 50%;
+  right: 0.4rem;
+  width: 37px;
+  height: 37px;
+  border: none;
+  color: #fff;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transform: translateY(-50%);
+  background-color: #ffa500;
+  border-radius: 50%;
 }
