--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -3,6 +3,7 @@ html
   head
     link(rel="stylesheet", href="/css/index.css")
     link(rel="stylesheet", href="/css/room.css")
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css", integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==", crossorigin="anonymous", referrerpolicy="no-referrer")    
     title Don't Say It! | 온라인 금칙어 게임
   body
     main#layout 
