[FIX] 모바일 환경에서 메인 레이아웃이 꽉 차게 나타나지 않는 현상 해결
- 뷰포트 메타 태그가 빠져서 발생하는 문제였음
- 뷰포트 메타 태그의 역할은 페이지의 요소들이 디바이스 화면의 실제 크기를 기준으로 나타나게끔 하는 것인데, 애가 빠지면 어떠한 일이 발생? => 현재 디바이스 화면의 크기에 상관 없이 데스크탑 화면 기준으로 페이지를 렌더링하게 됨(페이지의 요소들을 자동 축소 시킴) & 미디어 쿼리 제대로 동작 x

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -6,19 +6,20 @@
 body {
   display: flex;
   height: 100dvh;
-  flex-direction: column;
-  align-items: center;
+  color: #4d4d4d;
+  justify-content: center;
   background-color: #e2e1e0;
-}
-
-input:focus {
-  outline: 2px solid #ffa600a5;
 }
 
 main#layout {
   display: flex;
-  width: 32rem;
+  padding: 0 1rem;
+  max-width: 32rem;
   background-color: #fff;
-  flex-grow: 1;
+  flex: 1 1 0%;
   flex-direction: column;
+}
+
+input:focus {
+  outline: 2px solid #ffa600a5;
 }
