--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -1,8 +1,6 @@
 div#room_container {
   display: flex;
-  padding: 0 1rem;
-  color: #4d4d4d;
-  flex-grow: 1;
+  flex: 1 1 0%;
   flex-direction: column;
   justify-content: space-between;
 }
