--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -9,6 +9,13 @@ block content
                 span 1:54
         div 채팅창
         form.message_form
+            div.time_control
+                span 가능 횟수: 3  
+                div 
+                    span 
+                        i.fa-solid.fa-plus  시간 연장
+                    span 
+                        i.fa-solid.fa-minus  시간 단축                               
             input(type="text", placeholder="메시지를 입력해주세요.", maxLength=150)
             button
                 i.fa-solid.fa-arrow-up
