--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -7,7 +7,7 @@
 body {
   display: flex;
   height: 100dvh;
-  color: #4d4d4d;
+  color: #2b2b2b;
   justify-content: center;
   background-color: #e2e1e0;
 }
