--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -1,5 +1,17 @@
 extends layout.pug
 
 block content
-  h1 DON'T SAY IT
-  a(href="/room") 시작하기
+  div#main_container
+    header.main_header
+      span Beta
+      p 접속인원:
+        span.user_count 0
+    div.main_body
+      div.title_container
+        h2 온라인 금칙어 게임
+        h1 Don't Say It!
+      img(src="images/shushing_emoji.png", alt="🤫")
+      a(href="/room") 시작하기
+    footer.main_footer
+      p @2024 wilddev_seok 
+
