[UPDATE] 대화방 메시지 입력창 스타일 변경
- 기존 ui는 채팅 목록과 메시지 입력창의 시간 제어 영역이 겹쳐서 보였기 때문에 심미적으로 보기 안좋았음 => 시간 제어영역의 'position:absolute' css를 삭제하고, 메시지 입력창 상단에 border를 줘서 채팅목록과 메시지 입력창 간의 경계를 뚜렷하게 둠

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,6 +1,6 @@
 div#main_container {
   display: flex;
-  padding: 1rem 0;
+  padding: 1rem;
   flex: 1 1 0%;
   flex-direction: column;
   justify-content: space-between;
@@ -24,6 +24,7 @@ div.main_body {
   flex-direction: column;
   align-items: center;
   gap: 2.5rem;
+  margin-top: 1rem;
 }
 
 div.main_body > div.title_container {
@@ -45,7 +46,7 @@ div.main_body > img {
 }
 
 div.main_body > a {
-  width: 75%;
+  width: 80%;
   padding: 1rem 0;
   color: #fff;
   font-weight: 600;
