--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -5,8 +5,8 @@ block content
         header.room_header 
             span.exit_button 
                 i.fa-solid.fa-chevron-left
-            p.time_remaining 남은 시간 
-                span 1:54
+            p 남은 시간 
+                span.timer 2:00
         div.chat_list
             p.notice ⚠️ 불쾌감을 줄 수 있는 비속어나 욕설은 삼가주세요.
             p.notice 상대방이 입장했습니다. 
