[ADD] 토스트 메시지 추가 및 시간 조정 기능에 적용
- 토스트 메시지는 모든 페이지에서 공통적으로 사용할 것이기 때문에 'layout.pug'에 추가
- 시간 조정 가능 횟수가 0회일 때 토스트 메시지 출력하도록 수정

[etc]
- 현재 사용하고 있는 box-shadow 스타일의 경우, 다 같은 css를 사용하고 있기 때문에 해당 스타일을 유틸리티 클래스로 생성

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -23,3 +23,30 @@ main#layout {
 input:focus {
   outline: 2px solid #ffa600a5;
 }
+
+.box-shadow {
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+p#toast_msg {
+  position: fixed;
+  bottom: 2rem;
+  left: 50%;
+  padding: 0.5rem 1rem;
+  color: #fff;
+  font-size: 0.9rem;
+  z-index: 1;
+  transform: translateX(-50%);
+  border-radius: 0.5rem;
+  background-color: #2b2b2bdf;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+p#toast_msg.active {
+  opacity: 1;
+  visibility: visible;
+}
