--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -15,5 +15,6 @@ html
   body
     main#layout 
       block content
+      p#toast_msg.box-shadow 
     script(src="/socket.io/socket.io.js")
     script(src="/js/index.js")
