--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -11,7 +11,7 @@ block content
         h2 온라인 금칙어 게임
         h1 Don't Say It!
       img(src="images/shushing_emoji.png", alt="🤫")
-      a(href="/room") 시작하기
+      a(href="/room").box-shadow 시작하기
     footer.main_footer
       p @2024 wilddev_seok 
 
