[UPDATE] 대화방에 입장했을 때 소켓이 연결되도록 수정
- 불필요한 소켓 연결 회피와 리소스 최적화를 위해 대화방에 입장했을 때만 소켓이 연결되도록 수정
- 'public/js/index.js' 파일에서 소켓 관련 코드 & 대화방 관련 코드들 'public/js/room.js' 파일로 분리

--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -51,3 +51,5 @@ block content
                 input(type="text", placeholder="메시지를 입력해주세요.", maxLength=150)
                 button
                     i.fa-solid.fa-arrow-up
+    script(src="/socket.io/socket.io.js")
+    script(src="/js/room.js")
