[DELETE] 메인 페이지 접속인원 표시 제거
-  메인 페이지에서 접속인원을 표시하려면 메인 페이지에서도 소켓 연결이 필요한데, 리소스 절약을 위해 소켓 연결은 대화방 접속 시에만 수행할 예정

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -8,13 +8,12 @@ div#main_container {
 }
 
 header.main_header {
-  display: flex;
-  justify-content: space-between;
-  font-size: 0.9rem;
+  text-align: start;
 }
 
 header.main_header > span {
   font-weight: 500;
+  font-size: 0.9rem;
 }
 
 header.main_header > p > span {
@@ -68,4 +67,5 @@ div.main_body > a:hover {
 footer.main_footer {
   font-weight: 500;
   font-size: 0.8rem;
+  text-align: center;
 }
