[ADD] 유저 매칭 시 공지 메시지 보내기
- 기능 구현을 위해 기존 채팅창의 요소들 주석 처리

- inneText 대신에 빠르고 성능이 좋은 textContent 사용, textContent는 innerText와는 달리 기존 레이아웃이나 스타일을 따지지 않고 텍스트 요소를 다룸

- 이벤트 흐름: [유저][emit] user_match -> [서버][on] user_match -> [서버][emit] send_notice -> [유저][on] send_notice

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -45,7 +45,8 @@ div.chat_list::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
 }
 
-div.chat_list > p.notice {
+div.chat_list > p.notice,
+p.loading_msg {
   color: #7c7c7c;
   font-weight: 400;
   font-size: 0.9rem;
