--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -7,37 +7,22 @@ block content
                 i.fa-solid.fa-chevron-left
             p 남은 시간 
                 span.timer 2:00
-        div.chat_list
-            p.notice ⚠️ 불쾌감을 줄 수 있는 비속어나 욕설은 삼가주세요.
-            p.notice 상대방이 입장했습니다. 
-            p.notice 상대방의 금칙어는 
+        div.chat_list        
+            p.loading_msg 상대방을 기다리는 중입니다...
+            //p.notice ⚠️ 불쾌감을 줄 수 있는 비속어나 욕설은 삼가주세요.
+            //p.notice 상대방이 입장했습니다. 
+            //p.notice 상대방의 금칙어는 
                 span 나도
                 |입니다.
-            p.notice 대화 주제: 취미
-            div.other_msg 
+            //p.notice 대화 주제: 취미
+            //div.other_msg 
                 span 상대
                 p 안녕하세요 제 이름은...
-            div.my_msg                
+            //div.my_msg                
                 p 안녕하세요 제 이름은...
-            div.other_msg 
+            //div.other_msg 
                 span 상대
-                p 뭔데요 ㅋ
-            div.other_msg 
-                span 상대
-                p 안녕하세요 제 이름은...
-            div.my_msg                
-                p 안녕하세요 제 이름은...
-            div.other_msg 
-                span 상대
-                p 뭔데요 ㅋ
-            div.other_msg 
-                span 상대
-                p 안녕하세요 제 이름은...
-            div.my_msg                
-                p 안녕하세요 제 이름은...
-            div.other_msg 
-                span 상대
-                p 뭔데요 ㅋ        
+                p 뭔데요 ㅋ               
         form.message_form            
             div.time_control
                 p 가능 횟수: 
