[UPDATE] 대화방 헤더에 금칙어 표시
- 상대방의 금칙어를 채팅으로만 알려주게 되면, 상대방과 채팅을 하면서 밀려 올라가게 되면서 나중에 확인이 어려워질 수 있음. 또한 게임 자체의 몰입도를 위해 금칙어를 헤더에서도 표시하도록 수정
- 금칙어 데이터 목록에 데이터 일부 추가

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -10,7 +10,7 @@ header.room_header {
   display: flex;
   position: relative;
   height: 3rem;
-  padding: 0 1rem;
+  padding: 0.2rem 1rem;
   align-items: center;
   border-bottom: 1px solid #d2d2d2;
   user-select: none;
@@ -24,13 +24,27 @@ header.room_header > span.exit_button {
   transform: translateY(-50%);
 }
 
-header.room_header > p {
+header.room_header > div {
   text-align: center;
-  flex-grow: 1;
+  flex: 1 1 0%;
 }
 
-header.room_header > p > span.timer {
+header.room_header > div > p {
+  font-size: 0.8rem;
+}
+
+header.room_header > div > span.forbidden_word {
+  color: #fd5252;
   font-weight: 500;
+  visibility: hidden;
+}
+
+header.room_header > span.timer {
+  position: absolute;
+  top: 50%;
+  right: 1rem;
+  font-weight: 500;
+  transform: translateY(-50%);
 }
 
 div.chat_list {
