--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -5,8 +5,10 @@ block content
         header.room_header 
             span.exit_button 
                 i.fa-solid.fa-chevron-left
-            p 남은 시간 
-                span.timer 2:00
+            div 
+                p 상대방의 금칙어
+                span.forbidden_word ...
+            span.timer 2:00
         div.chat_list        
             p.loading_msg 상대방을 기다리는 중입니다...
             //p.notice ⚠️ 불쾌감을 줄 수 있는 비속어나 욕설은 삼가주세요.
