[UPDATE] 대화방 헤더의 금칙어 표시 방식 변경
- 금칙어 전송 시 '상대방의 금칙어'라는 레이블과 함께 헤더에 나타나도록 수정 => 상대방을 기다릴 때, 레이블만 덩그러니 있는게 보기 좋지 않음
- '상대방과 대화를 시작해보세요.' 메시지 전송과 함께 타이머 시작하도록 설정

--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -5,9 +5,9 @@ block content
         header.room_header 
             span.exit_button 
                 i.fa-solid.fa-chevron-left
-            div 
+            div.word_container 
                 p 상대방의 금칙어
-                span.forbidden_word ...
+                span.forbidden_word
             span.timer 2:00
         div.chat_list        
             p.loading_msg 상대방을 기다리는 중입니다...
