[ADD] 대화방 이탈 시의 확인 모달창 추가
- 실수 또는 신중한 선택을 위해서 대화방 퇴장 시에는 확인 모달창을 띄우도록 업데이트

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -164,3 +164,19 @@ form.message_form > div.input_container > button {
   background-color: #ffa500;
   border-radius: 50%;
 }
+
+dialog {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1rem;
+  border: none;
+  border-radius: 0.5rem;
+}
+
+div.modal_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
