--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -37,6 +37,7 @@ block content
             div.input_container                                
                 input(type="text", placeholder="메시지를 입력해주세요.", maxLength=150)
                 button
-                    i.fa-solid.fa-arrow-up
+                    i.fa-solid.fa-arrow-up    
+        include partials/exitModal
     script(src="/socket.io/socket.io.js")
     script(src="/js/room.js")
