--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,3 +1,15 @@
+:root {
+  --primary-color: #ffa600;
+  --primary-bg-color: #fff;
+  --secondary-bg-color: #d2d2d270;
+  --border-color: #d2d2d2;
+  --primary-text-color: #2b2b2b;
+  --secondary-text-color: #fff;
+  --tertiary-text-color: #d2d2d243;
+  --info-color: #7c7c7c;
+  --accent-color: #fd5252;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -7,7 +19,7 @@
 body {
   display: flex;
   height: 100dvh;
-  color: #2b2b2b;
+  color: var(--primary-text-color);
   justify-content: center;
   background-color: #e2e1e0;
 }
@@ -15,7 +27,7 @@ body {
 main#layout {
   display: flex;
   max-width: 32rem;
-  background-color: #fff;
+  background-color: var(--primary-bg-color);
   flex: 1 1 0%;
   flex-direction: column;
 }
@@ -35,7 +47,7 @@ p#toast_msg {
   bottom: 2rem;
   left: 50%;
   padding: 0.5rem 1rem;
-  color: #fff;
+  color: var(--primary-bg-color);
   font-size: 0.9rem;
   z-index: 1;
   transform: translateX(-50%);
