--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -33,7 +33,7 @@ div.main_body > div.title_container {
 }
 
 div.main_body > div.title_container > h2 {
-  color: #ffa500;
+  color: var(--primary-color);
   font-weight: 600;
   font-size: 1.2rem;
 }
@@ -49,12 +49,12 @@ div.main_body > img {
 div.main_body > a {
   width: 85%;
   padding: 0.9rem 0;
-  color: #fff;
+  color: var(--secondary-text-color);
   font-weight: 600;
   font-size: 1.1rem;
   text-decoration: none;
   text-align: center;
-  background-color: #ffa500;
+  background-color: var(--primary-color);
   border-radius: 2.5rem;
   margin-top: 4rem;
   transition: filter 0.1s ease;
