--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -39,5 +39,6 @@ block content
                 button
                     i.fa-solid.fa-arrow-up    
         include partials/exitModal
+        include partials/resultModal
     script(src="/socket.io/socket.io.js")
     script(src="/js/room.js")
