--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -175,6 +175,10 @@ dialog {
   border-radius: 1rem;
 }
 
+dialog:focus {
+  outline: none;
+}
+
 dialog > div.modal_container {
   display: flex;
   flex-direction: column;
