--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -4,6 +4,7 @@ html
     meta(charset="UTF-8")
     meta(name="theme-color", content="#fff")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    link(rel="icon", href="/images/shushing_emoji.png")
     link(rel="stylesheet", href="/css/index.css")
     link(rel="stylesheet", href="/css/main.css")
     link(rel="stylesheet", href="/css/room.css")
