[UPDATE] 결과 모달창 세부 디자인 변경
- 모달창의 설명 영역과 버튼 영역의 구별화를 위해 일부 padding 값 변경
- div.modal_container에 새로운 div가 추가될 것을 대비해 기존 버튼 영역을 감싸던 div에 'button_container' 클래스 추가
- 무승부 시의 결과 모달창 이모지 변경
- 상대방 퇴장 시의 결과 모달창에도 이모지 추가

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -169,7 +169,7 @@ dialog {
   top: 50%;
   left: 50%;
   width: 14.5rem;
-  padding: 1.5rem;
+  padding: 1.2rem;
   border: none;
   transform: translate(-50%, -50%);
   border-radius: 1rem;
@@ -184,21 +184,22 @@ dialog > div.modal_container {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.6rem;
 }
 
 dialog.result_modal > div.modal_container > p {
   text-align: center;
 }
 
-dialog > div.modal_container > div {
+dialog > div.modal_container > div.button_container {
   display: flex;
   width: 100%;
   gap: 1rem;
   justify-content: space-between;
+  margin-top: 0.4rem;
 }
 
-dialog > div.modal_container > div > button {
+dialog > div.modal_container > div.button_container > button {
   width: 100%;
   padding: 0.5rem;
   border: none;
@@ -208,19 +209,31 @@ dialog > div.modal_container > div > button {
   border-radius: 0.5rem;
 }
 
-dialog > div.modal_container > div > button:focus {
+dialog > div.modal_container > div.button_container > button:focus {
   outline: none;
 }
 
-dialog.exit_modal > div.modal_container > div > button.modal_closeBtn,
-dialog.result_modal > div.modal_container > div > button.modal_exitBtn {
+dialog.exit_modal
+  > div.modal_container
+  > div.button_container
+  > button.modal_closeBtn,
+dialog.result_modal
+  > div.modal_container
+  > div.button_container
+  > button.modal_exitBtn {
   border: 1px solid var(--border-color);
   color: var(--primary-text-color);
   background-color: var(--secondary-bg-color);
 }
 
-dialog.exit_modal > div.modal_container > div > button.modal_exitBtn,
-dialog.result_modal > div.modal_container > div > button.modal_matchBtn {
+dialog.exit_modal
+  > div.modal_container
+  > div.button_container
+  > button.modal_exitBtn,
+dialog.result_modal
+  > div.modal_container
+  > div.button_container
+  > button.modal_matchBtn {
   color: var(--secondary-text-color);
   background-color: var(--primary-color);
 }
