--- a/src/views/partials/resultModal.pug
+++ b/src/views/partials/resultModal.pug
@@ -2,7 +2,7 @@ dialog.result_modal
     div.modal_container 
         h2 타임 오버
         p 제한 시간이 모두 지나 게임이 종료되었습니다.
-        div
+        div.button_container
             button.modal_exitBtn 나가기
             button.modal_matchBtn 다음 상대 
             
