--- a/src/views/partials/exitModal.pug
+++ b/src/views/partials/exitModal.pug
@@ -1,7 +1,7 @@
 dialog.exit_modal 
     div.modal_container 
         p 지금 퇴장하시면 다시 참여할 수 없습니다. 정말 나가시겠습니까?
-        div
+        div.button_container
             button.modal_closeBtn 닫기 
             button.modal_exitBtn 나가기 
             
