[ADD] 타임오버 모달창 분리
- 기존에는 타임오버 모달창과 승/패 결과 모달창이 resultModal.pug를 공유하는 방식이었으나, 승/패 결과 모달창의 스타일을 수정하면서 두 모달창의 차이점이 많이 발생하게 되어 타임오버 모달창을 별개의 파일로 분리

- 'src/views/partials/timeOverModal.pug' 파일 추가

- 자신의 금칙어를 좀 더 가독성 있게 확인할 수 있도록 결과 모달창의 설명 영역의 스타일 수정

- 상대방 퇴장 시에도 결과 모달창을 통해 자신의 금칙어를 확인할 수 있도록 수정

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -187,10 +187,6 @@ dialog > div.modal_container {
   gap: 0.6rem;
 }
 
-dialog.result_modal > div.modal_container > p {
-  text-align: center;
-}
-
 dialog > div.modal_container > div.button_container {
   display: flex;
   width: 100%;
@@ -213,10 +209,37 @@ dialog > div.modal_container > div.button_container > button:focus {
   outline: none;
 }
 
+dialog.exit_modal > div.modal_container > p {
+  margin-bottom: 0.5rem;
+}
+
+dialog.timeover_modal > div.modal_container > p {
+  font-size: 0.9rem;
+  text-align: center;
+}
+
+dialog.result_modal > div.modal_container > div.desc_container {
+  text-align: center;
+}
+
+dialog.result_modal > div.modal_container > div.desc_container > span {
+  font-size: 0.9rem;
+}
+
+dialog.result_modal > div.modal_container > div.desc_container > p {
+  color: var(--accent-color);
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+
 dialog.exit_modal
   > div.modal_container
   > div.button_container
   > button.modal_closeBtn,
+dialog.timeover_modal
+  > div.modal_container
+  > div.button_container
+  > button.modal_exitBtn,
 dialog.result_modal
   > div.modal_container
   > div.button_container
@@ -230,6 +253,10 @@ dialog.exit_modal
   > div.modal_container
   > div.button_container
   > button.modal_exitBtn,
+dialog.timeover_modal
+  > div.modal_container
+  > div.button_container
+  > button.modal_matchBtn,
 dialog.result_modal
   > div.modal_container
   > div.button_container
