--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -25,6 +25,7 @@ block content
                 button
                     i.fa-solid.fa-arrow-up    
         include partials/exitModal
+        include partials/timeOverModal
         include partials/resultModal
     script(src="/socket.io/socket.io.js")
     script(src="/js/room.js")
