[UPDATE] 채팅 메시지 최대 너비 설정
- 메시지의 길이가 길 경우 p 테그가 메인 레이아웃을 뚫고 나가는 현상이 발생하여 이와 같이 수정

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -92,6 +92,8 @@ div.chat_list > div.other_msg > span {
 div.chat_list > div.other_msg > p {
   background-color: var(--tertiary-text-color);
   margin-top: 0.5rem;
+  max-width: 15rem;
+  word-break: break-all;
 }
 
 div.chat_list > div.my_msg {
@@ -101,7 +103,10 @@ div.chat_list > div.my_msg {
 
 div.chat_list > div.my_msg > p {
   color: var(--secondary-text-color);
+  text-align: start;
   background-color: var(--primary-color);
+  max-width: 15rem;
+  word-break: break-all;
 }
 
 form.message_form {
