[UPDATE] 채팅 메시지 최대 너비 반응형 고려
- 일부 모바일 디스플레이 환경에서는 채팅 메시지의 최대 너비가 다르게 나타나도록 수정

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -109,6 +109,20 @@ div.chat_list > div.my_msg > p {
   word-break: break-all;
 }
 
+@media (max-width: 400px) {
+  div.chat_list > div.other_msg > p,
+  div.chat_list > div.my_msg > p {
+    max-width: 10rem;
+  }
+}
+
+@media (min-width: 400px) and (max-width: 500px) {
+  div.chat_list > div.other_msg > p,
+  div.chat_list > div.my_msg > p {
+    max-width: 12rem;
+  }
+}
+
 form.message_form {
   display: flex;
   padding: 0.8rem 1rem;
