[UPDATE] 상대방 중도 퇴장 시의 소켓 이벤트 따로 정의
- 오류를 최소화하기 위해서 게임 결과에 따른 소켓 이벤트를 공유하지 않고 각각 따로 정의
- 수정 전: 상대방 퇴장 시 => 'user_won_process'
- 수정 후: 상대방 퇴장 시 => 'opponent_left'

[이벤트 흐름]
- [소켓A][emit] exit_room => [서버][on] exit_room => [서버][emit] opponent_left => [소켓B][on] opponent_left => [소켓B][emit] opponent_left => [서버][on] opponent_left

[etc]
- 'timeOverModal.pug' => 'resultModal.pug', 'resultModal.pug' => 'winLossModal.pug' 파일명 변경 및 그에 따른 코드들 수정
- 상대방이 퇴장하여 게임에서 승리했다는 사실을 사용자에게 좀 더 명확하게 전달하기 위해서 상대방 퇴장 시에는 'resultModal(전 timeOverModal)' 모달창을 이용하도록 수정

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -232,20 +232,20 @@ dialog.exit_modal > div.modal_container > p {
   margin-bottom: 0.5rem;
 }
 
-dialog.timeover_modal > div.modal_container > p {
+dialog.result_modal > div.modal_container > p {
   font-size: 0.9rem;
   text-align: center;
 }
 
-dialog.result_modal > div.modal_container > div.desc_container {
+dialog.winLoss_modal > div.modal_container > div.desc_container {
   text-align: center;
 }
 
-dialog.result_modal > div.modal_container > div.desc_container > span {
+dialog.winLoss_modal > div.modal_container > div.desc_container > span {
   font-size: 0.9rem;
 }
 
-dialog.result_modal > div.modal_container > div.desc_container > p {
+dialog.winLoss_modal > div.modal_container > div.desc_container > p {
   color: var(--accent-color);
   font-weight: 500;
   font-size: 1.2rem;
@@ -255,11 +255,11 @@ dialog.exit_modal
   > div.modal_container
   > div.button_container
   > button.modal_closeBtn,
-dialog.timeover_modal
+dialog.result_modal
   > div.modal_container
   > div.button_container
   > button.modal_exitBtn,
-dialog.result_modal
+dialog.winLoss_modal
   > div.modal_container
   > div.button_container
   > button.modal_exitBtn {
@@ -272,11 +272,11 @@ dialog.exit_modal
   > div.modal_container
   > div.button_container
   > button.modal_exitBtn,
-dialog.timeover_modal
+dialog.result_modal
   > div.modal_container
   > div.button_container
   > button.modal_matchBtn,
-dialog.result_modal
+dialog.winLoss_modal
   > div.modal_container
   > div.button_container
   > button.modal_matchBtn {
