--- a/src/views/partials/winLossModal.pug
+++ b/src/views/partials/winLossModal.pug
@@ -1,7 +1,9 @@
-dialog.timeover_modal 
+dialog.winLoss_modal 
     div.modal_container 
-        h2 😅 무승부
-        p 제한 시간이 모두 지나 게임이 종료되었습니다.
+        h2
+        div.desc_container
+            span 당신의 금칙어
+            p 
         div.button_container
             button.modal_exitBtn 나가기
             button.modal_matchBtn 다음 상대 
