--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -96,6 +96,11 @@ div.chat_list > div.other_msg > p {
   word-break: break-all;
 }
 
+div.chat_list > div.other_msg > p > span {
+  color: var(--accent-color);
+  font-weight: 600;
+}
+
 div.chat_list > div.my_msg {
   text-align: end;
   margin-top: 0.8rem;
