[UPDATE] 게임 제한 시간 3분으로 변경
- 여러 차례 테스트 해본 결과, 2분이라는 시간이 생각보다 굉장히 짧게 느껴져 3분으로 변경

[etc]
- 심미성을 위해 대화방 헤더와 입력창의 경계를 표현하는 border 스타일을 box-shadow로 변경

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -4,6 +4,7 @@ div#room_container {
   flex-direction: column;
   justify-content: space-between;
   min-height: 0;
+  overflow: hidden;
 }
 
 header.room_header {
@@ -12,7 +13,7 @@ header.room_header {
   height: 3rem;
   padding: 0.2rem 1rem;
   align-items: center;
-  border-bottom: 1px solid var(--border-color);
+  box-shadow: 0 4px 4px -2px var(--secondary-bg-color);
   user-select: none;
 }
 
@@ -132,7 +133,7 @@ form.message_form {
   display: flex;
   padding: 0.8rem 1rem;
   flex-direction: column;
-  border-top: 1px solid var(--border-color);
+  box-shadow: 0 4px 4px 6px var(--secondary-bg-color);
 }
 
 form.message_form > div.time_control {
