--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -2,6 +2,7 @@
   --primary-color: #ffa600;
   --primary-bg-color: #fff;
   --secondary-bg-color: #d2d2d270;
+  --tertiary-bg-color: #2b2b2bdf;
   --border-color: #d2d2d2;
   --primary-text-color: #2b2b2b;
   --secondary-text-color: #fff;
@@ -47,12 +48,12 @@ p#toast_msg {
   bottom: 2rem;
   left: 50%;
   padding: 0.5rem 1rem;
-  color: var(--primary-bg-color);
+  color: var(--secondary-text-color);
   font-size: 0.9rem;
   z-index: 1;
   transform: translateX(-50%);
   border-radius: 0.5rem;
-  background-color: #2b2b2bdf;
+  background-color: var(--tertiary-bg-color);
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.5s ease, visibility 0.5s ease;
