--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -10,7 +10,9 @@ block content
                 span.forbidden_word
             span.timer 3:00
         div.chat_list        
-            p.loading_msg 상대방을 기다리는 중입니다...             
+            p.loading_msg 상대방을 기다리는 중입니다...
+            span.scrolldown_button
+                i.fa-solid.fa-arrow-down          
         form.message_form            
             div.time_control
                 p 변경 기회: 
