[ADD] 스크롤 하단 이동 버튼 기능 추가
- 스크롤 하단 이동 버튼 클릭 시 채팅창의 스크롤이 최하단으로 이동하도록 설정
- 스크롤 하단 이동 버튼을 항상 채팅창 최하단에 위치시키기 위해서 부모 요소를 메시지 입력창으로 변경
- 주변 요소와의 색상 조화를 고려해서 스크롤 하단 이동 버튼 css 스타일 변경

--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -10,10 +10,10 @@ block content
                 span.forbidden_word
             span.timer 3:00
         div.chat_list        
-            p.loading_msg 상대방을 기다리는 중입니다...
-            span.scrolldown_button
-                i.fa-solid.fa-arrow-down          
+            p.loading_msg 상대방을 기다리는 중입니다...                   
         form.message_form            
+            span.scrolldown_button.box-shadow
+                i.fa-solid.fa-arrow-down   
             div.time_control
                 p 변경 기회: 
                     span.remain_chances 3  
